@@ -25,6 +25,7 @@ package org.gjt.sp.jedit.gui;
 //{{{ Imports
 import java.awt.event.*;
 import org.gjt.sp.jedit.Debug;
+import org.gjt.sp.jedit.OperatingSystem;
 //}}}
 
 /**
@@ -186,6 +187,17 @@ public class KeyEventWorkaround
 		}
 	} //}}}
 
+	//{{{ isMacControl() method
+	/**
+	 * Apple sucks.
+	 */
+	public static boolean isMacControl(KeyEvent evt)
+	{
+		return (OperatingSystem.isMacOS() &&
+			(evt.getModifiers() & InputEvent.CTRL_MASK) != 0
+			&& evt.getKeyChar() <= 0x2B);
+	} //}}}
+
 	//{{{ isNumericKeypad() method
 	public static boolean isNumericKeypad(int keyCode)
 	{
@@ -284,7 +296,8 @@ public class KeyEventWorkaround
 		case KeyEvent.KEY_TYPED:
 			// need to let \b through so that backspace will work
 			// in HistoryTextFields
-			if((ch < 0x20 || ch == 0x7f || ch == 0xff)
+			if(!isMacControl(evt)
+				&& (ch < 0x20 || ch == 0x7f || ch == 0xff)
 				&& ch != '\b' && ch != '\t' && ch != '\n')
 			{
 				return null;
